--- a/python/danainstall/setuptool/test.conf
+++ b/python/danainstall/setuptool/test.conf
@@ -1,9 +1,26 @@
-[danainstall]
-targetdir = vosle
-hostlist = 1.51,1.53
+[common]
+clustername =
+installuser = root
+nodelist = 192.168.1.95, 192.168.1.92
 
 
 
-[eagles]
-hosts = 1.51, 1.52
-ports = 31000
+[danacenter]
+centernodes = 192.168.1.95
+managenodes = 
+
+
+[ealges]
+hostlist = a,b,c,d
+
+
+[crab]
+hostlist = a
+
+
+[stork]
+hostlist = a,b
+
+
+[leopard]
+hostlist = a,b,c
