--- a/python/danainstall/setuptool/test.conf
+++ b/python/danainstall/setuptool/test.conf
@@ -1,17 +1,17 @@
 [common]
-clustername =
+clustername = myname
 installuser = root
-nodelist = 192.168.1.95, 192.168.1.92
+nodes = 192.168.1.95, 192.168.1.92
 
 
 
 [danacenter]
 centernodes = 192.168.1.95
-managenodes = 
+managenodes = 192.168.1.1, 192.168.2.2
 
 
-[ealges]
-hostlist = a,b,c,d
+[eagles]
+hosts = 192.168.1.95
 
 
 [crab]
