--- a/python/danainstall/setuptool/test.conf
+++ b/python/danainstall/setuptool/test.conf
@@ -1,17 +1,18 @@
 [common]
 clustername = myname
 installuser = root
-nodes = 192.168.1.95, 192.168.1.92
+#nodes = 192.168.1.95, 192.168.1.92
+nodes = 192.168.40.137, 192.168.40.138
 
 
 
 [danacenter]
-centernodes = 192.168.1.95
-managenodes = 192.168.1.1, 192.168.2.2
+centernodes = 192.168.40.137
+managenodes = 192.168.40.137, 192.168.40.138
 
 
 [eagles]
-hosts = 192.168.1.95
+hosts = 192.168.40.137, 192.168.40.138
 
 
 [crab]
