tuning sys setting

--- a/python/danainstall/setuptool/test.conf
+++ b/python/danainstall/setuptool/test.conf
@@ -1,14 +1,14 @@
 [common]
 clustername = myname
 installuser = root
-#nodes = 192.168.1.95, 192.168.1.92
-nodes = 192.168.40.137, 192.168.40.138
+nodes = 192.168.1.95, 192.168.1.92
+#nodes = 192.168.40.137, 192.168.40.138
 
 
 
 [danacenter]
-centernodes = 192.168.40.137
-managenodes = 192.168.40.137, 192.168.40.138
+centernodes = 192.168.1.95
+managenodes = 192.168.1.96, 192.168.1.97
 
 
 [eagles]
@@ -16,12 +16,12 @@ hosts = 192.168.40.137, 192.168.40.138
 
 
 [crab]
-hostlist = a
+hostlist = 192.168.3.98
 
 
 [stork]
-hostlist = a,b
+hostlist = 192.168.3.22
 
 
 [leopard]
-hostlist = a,b,c
+hostlist = 192.168.1.95
