--- a/python/danainstall/setuptool/test.conf
+++ b/python/danainstall/setuptool/test.conf
@@ -1,18 +1,19 @@
 [common]
 clustername = myname
 installuser = root
-nodes = 192.168.1.95, 192.168.1.92
+nodes = 192.168.1.106
 #nodes = 192.168.40.137, 192.168.40.138
+adminpwd = 999999
 
 
 
 [danacenter]
-centernodes = 192.168.1.95
-managenodes = 192.168.1.96, 192.168.1.97
+centernodes = 192.168.1.106
+managenodes = 192.168.1.106
 
 
 [eagles]
-hosts = 192.168.40.137, 192.168.40.138
+hosts = 192.168.1.106
 
 
 [crab]
