--- a/python/danainstall/setuptool/test.conf
+++ b/python/danainstall/setuptool/test.conf
@@ -17,12 +17,14 @@ hosts = 192.168.40.130
 
 
 [crab]
-hostlist = 192.168.3.98
+hosts = 192.168.40.130
 
 
-[stork]
-hostlist = 192.168.3.22
-
+[dodo]
+hosts = 192.168.40.130
 
 [leopard]
-hostlist = 192.168.1.95
+hosts = 192.168.40.130
+
+[stork]
+hosts = 192.168.40.130
