--- a/python/danainstall/setuptool/test.conf
+++ b/python/danainstall/setuptool/test.conf
@@ -13,18 +13,19 @@ managenodes = 192.168.40.130
 
 
 [eagles]
-hosts = 192.168.40.130
+hosts = 
 
 
 [crab]
-hosts = 192.168.40.130
+hosts = 
 
-
-[dodo]
-hosts = 192.168.40.130
-
-[leopard]
-hosts = 192.168.40.130
 
 [stork]
-hosts = 192.168.40.130
+hosts = 
+
+
+[leopard]
+hosts = 
+
+[dodo]
+hosts = 
